# submerge

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  docker.yml
scripts/: bazarr-hook.sh  optimize_favicon.py
src/submerge/: __init__.py  api.py  cli.py  config.py  exceptions.py  extract.py  hook.py  langmap.py  merge.py  models.py  notify.py  presets.py  probe.py  queue.py  repair.py  scanner.py  subtitle_io.py  sync.py  worker.py
src/submerge/routers/: history.py  merge.py  presets.py  preview.py  queue.py  repair.py  scanner.py  schedule.py  settings.py  stats.py
src/submerge/static/: app.js  style.css
src/submerge/templates/: base.html  history.html  index.html  settings.html  style_fields.html  styles.html
tests/: __init__.py  conftest.py  test_media_type_filter.py  test_sync_integration.py
tests/fixtures/: generate_fixtures.py  sample_en.srt  sample_euc_kr.srt  sample_fr.srt  sample_pl.srt
tests/integration/: test_integration.py  test_sync_integration.py
tests/unit/: test_api.py  test_bottom_dedup.py  test_cli.py  test_config.py  test_css.py  test_dropdown_js.py  test_external_tools.py  test_fix_overlaps.py  test_history.py  test_history_export.py  test_hook.py  test_langmap.py  test_merge.py  test_merge_encoding.py  test_notify.py  test_probe.py  test_quality_checks.py  test_queue.py  test_repair.py  test_scanner.py  test_schedule.py  test_stats.py  test_sync.py  test_tv_search.py
