[project]
name = "submerge"
version = "2.0.3"
description = "Automatic bilingual subtitle merge service for ARR stacks"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/pltzr2101/submerge"
Repository = "https://github.com/pltzr2101/submerge"
Changelog = "https://github.com/pltzr2101/submerge/blob/main/CHANGES.md"
dependencies = [
    "click>=8.1",
    "pysubs2>=1.6",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "filelock>=3.0",
    "pydantic>=2.0",
    "starlette>=0.36",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "aiofiles>=23.0",
]

[project.scripts]
submerge = "submerge.cli:main"

[project.optional-dependencies]
sync = ["ffsubsync>=0.4.31"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "ffsubsync>=0.4.31"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff.lint]
select = ["E", "F", "I"]
